--- a/FinalProject/CustomerApplication/Views/Home/Products.cshtml
+++ b/FinalProject/CustomerApplication/Views/Home/Products.cshtml
@@ -1,6 +1,10 @@
-﻿
+﻿@{
+    Layout = "~/Views/Shared/_CustomerLayout.cshtml";
+}
+
 <link rel="stylesheet" href="~/css/style.css">
-      <div id="banner">
+<div>
+          <div id="banner">
             <div style = "margin: 2.5% 0 0 23.5%; position: absolute; ">
                 <a style="font-size:small; color:white;" href ="https://www.durexvietnam.vn/">Trang Chủ</a>
             </div>
@@ -15,7 +19,6 @@
                 <img src="~/assets/images/choice.png">
             </div>
             <div class="items">
-
             </div>
             
         </div>
@@ -23,6 +26,8 @@
             <a style="text-decoration:none;font-size: large; padding:0 15px 0 25px;" href ="https://www.durexvietnam.vn/collections/all?page=1">1</a>
             <a style="text-decoration:none;font-size: large; padding:0 15px 0 25px;" href ="https://www.durexvietnam.vn/collections/all?page=2">2</a>
         </div>
+</div>
+
 
       
 <script src="~/js/index.js"></script>
