--- a/FinalProject/CustomerApplication/Views/Home/Products.cshtml
+++ b/FinalProject/CustomerApplication/Views/Home/Products.cshtml
@@ -2,9 +2,9 @@
     Layout = "~/Views/Shared/_CustomerLayout.cshtml";
 }
 
-<link rel="stylesheet" href="~/css/style.css">
-<div>
-          <div id="banner">
+<link rel="stylesheet" href="~/css/style1.css">
+
+         <div id="banner">
             <div style = "margin: 2.5% 0 0 23.5%; position: absolute; ">
                 <a style="font-size:small; color:white;" href ="https://www.durexvietnam.vn/">Trang Chủ</a>
             </div>
@@ -26,7 +26,7 @@
             <a style="text-decoration:none;font-size: large; padding:0 15px 0 25px;" href ="https://www.durexvietnam.vn/collections/all?page=1">1</a>
             <a style="text-decoration:none;font-size: large; padding:0 15px 0 25px;" href ="https://www.durexvietnam.vn/collections/all?page=2">2</a>
         </div>
-</div>
+
 
 
       
