--- a/FinalProject/CustomerApplication/Views/Home/Products.cshtml
+++ b/FinalProject/CustomerApplication/Views/Home/Products.cshtml
@@ -2,16 +2,13 @@
     Layout = "~/Views/Shared/_CustomerLayout.cshtml";
 }
 
-<link rel="stylesheet" href="~/css/style1.css">
+<link rel="stylesheet" href="~/css/style2.css">
 <div>
         <div id="banner">
-            <div style = "margin: 2.5% 0 0 23.5%; position: absolute; ">
-                <a style="font-size:small; color:white;text-decoration:none" href ="~/home/index">Trang Chủ</a>
-            </div>
-            <p style="width: 100%; font-size:xx-large;padding-top: 2.5%; text-align: center; position: absolute;color:white;">CÁC SẢN PHẨM BAO CAO SU VÀ GEL BÔI TRƠN TỐT</p>
+           <div style="width: 100%; font-size:xx-large; text-align: center;color:white;">CÁC SẢN PHẨM BAO CAO SU VÀ GEL BÔI TRƠN TỐT</div>
         </div>
         <div>
-            <h4 style="color:rgba(0,91,170,255);text-align: center;padding-top:2%;">Tại Durex, bạn sẽ tìm thấy các sản phẩm nâng cao chất lượng cuộc yêu: từ bao cao su có gân và hạt nổi, bao cao su kéo dài thời gian quan hệ đến các loại gel bôi trơn. Hãy lựa chọn ngay! </h4>
+            <h4 style="color:rgba(0,91,170,255);text-align: center;padding-top:2%;">Tại đây bạn sẽ tìm thấy các sản phẩm nâng cao chất lượng cuộc yêu: từ bao cao su có gân và hạt nổi, bao cao su kéo dài thời gian quan hệ đến các loại gel bôi trơn. Hãy lựa chọn ngay! </h4>
             <h3 id = "total" style="color:rgba(0,91,170,255);text-align:left;font-size:xx-large;padding:2% 0 0 3%;">22 SẢN PHẨM</h3>
         </div>
         <div class="container">
