--- a/FinalProject/CustomerApplication/Views/Shared/_CustomerLayout.cshtml
+++ b/FinalProject/CustomerApplication/Views/Shared/_CustomerLayout.cshtml
@@ -2,96 +2,41 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="~/css/style1.css">
+    <link rel="stylesheet" href="~/css/style2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Bao Cao Su, Gel Bôi Trơn & Tình Dục An Toàn | Durex Vietnam</title>
-    <style>
-        /*layout*/
-#header{
-    background-color: rgba(0,91,170,255);
-    width: 100%;
-    display:flex;
-
-}
-#logo-bar{
-  /*  padding-left: 10px;*/
-    display: flex;
-
-}
-#logo-bar img {
-        height: 100px;
-        width: 100px;
-}
-
-#search-bar{
-    -webkit-appearance: none;
-   
-}
-
-#searchInput{
-    background: url(https://cdn.shopify.com/s/files/1/0104/6662/3554/t/13/assets/search.svg) no-repeat center right 18px #fff;
-    background-size: auto 20px;
-    outline: none;
-}
-
-.font-link{
-    color: white;
-    font-size: small;
-    text-decoration:none;
-}
-
-
-.footer {
-    background-color: rgba(0,91,170,255);
-    width: 100%;
-   
-}
-ul {
-    list-style-type: none;
-}
-.main-footersocial{
-    display:flex;
-    width: 120px;
-    align-content: center;
-    margin-left:auto;
-    margin-right:auto;
-    padding:0;
-}
-
-.footer-box{
-    height:100%;
-    width: 350px;
-    text-align:center;
-    margin-left: auto;
-    margin-right:auto;
-}
-.footer-credits{
-    font-size: small;
-    color:white;
-    margin-top:10px;
-    padding-bottom:10px;
-}
-.extra-footer .font-link:hover{
-    text-decoration: underline white solid;
-}
-
-</style>
 </head>
 
 <body>
     <div id="header">
+      
             <div id="logo-bar">
-            <img style="padding-left" src="~/assets/images/logo1.png"/>
-            <ul style="font-size: larger;padding:10px">
-                <li style="" ><a class="font-link" href="~/home/products">Sản Phẩm</a></li>
-                <li style=""><a class="font-link" href="https://www.durexvietnam.vn/collections/find-your-best-fit">Chọn Bao Vừa Vặn</a></li>
+            <a href="~/home/index"><img  src="~/assets/images/logo1.png"/></a>
+            <ul style="font-size: larger;padding:16px">
+                <li ><a class="font-link" href="~/home/products">Sản Phẩm</a></li>
+                <li ><a class="font-link" href="https://www.durexvietnam.vn/collections/find-your-best-fit">Chọn Bao Vừa Vặn</a></li>
             </ul>
-            <ul style="font-size: larger;padding:15px;">
-                <li style="" class = "font-link">Bao Cao Su <i class="fa fa-angle-down"></i> </li>
-                <li style=""><a class="font-link" href="https://www.durexvietnam.vn/blogs/bi-kip-cho-cuoc-yeu-thang-hoa">Bí Kíp Cho Cuộc Yêu Thăng Hoa</a></li>
+            <ul style="font-size: larger;padding:22px;">
+                <li>
+                    <div class="dropdown">
+                        <div class="dropbtn" onclick="myFunction()">
+                            Bao Cao Su
+                          <i class="fa fa-caret-down"></i>
+                        </div>
+                        <div class="dropdown-content" id="myDropdown">
+                          <a href="#">Tất cả sản phẩm</a>
+                          <a href="#">Tự tin chinh phục</a>
+                          <a href="#">Bức phá sức bền</a>
+                          <a href="#">Thăng hoa cảm xúc</a>
+                          <a href="#">Cuồng nhiệt đam mê</a>
+                        </div>
+                    </div> 
+                </li>
+                <li ><a class="font-link" href="https://www.durexvietnam.vn/blogs/bi-kip-cho-cuoc-yeu-thang-hoa">Bí Kíp Cho Cuộc Yêu Thăng Hoa</a></li>
             </ul>
             </div>
-            <div id="search-bar" style="padding:30px;margin:5px 0 10px 0;">
+            <div id="search-bar">
                 <input
                     style="font-size:larger;color:grey;background-color: white;border:none;border-radius:8px;height:30px;"
                     placeholder="TÌM KIẾM" id="searchInput">
@@ -129,7 +74,24 @@ ul {
           <div class="footer-credits">© 2022, BCS Vietnam</div>
         </div>
    
-    </div> 
+    </div>
+    <script>
+        /* When the user clicks on the button, 
+        toggle between hiding and showing the dropdown content */
+        function myFunction() {
+            console.log("CLicked it");
+            document.getElementById("myDropdown").classList.toggle("show");
+        }
+        
+        // Close the dropdown if the user clicks outside of it
+        window.onclick = function(e) {
+          if (!e.target.matches('.dropbtn')) {
+          var myDropdown = document.getElementById("myDropdown");
+            if (myDropdown.classList.contains('show')) {
+              myDropdown.classList.remove('show');
+            }
+          }
+        }
+    </script> 
 </body>
-
 </html>
