--- a/FinalProject/CustomerApplication/Views/Home/Products.cshtml
+++ b/FinalProject/CustomerApplication/Views/Home/Products.cshtml
@@ -2,7 +2,7 @@
     Layout = "~/Views/Shared/_CustomerLayout.cshtml";
 }
 
-<link rel="stylesheet" href="~/css/style2.css">
+@*<link rel="stylesheet" href="~/css/style3.css">*@
 <div>
         <div id="banner">
            <div style="width: 100%; font-size:xx-large; text-align: center;color:white;">CÁC SẢN PHẨM BAO CAO SU VÀ GEL BÔI TRƠN TỐT</div>
@@ -58,10 +58,10 @@
         
             </div>
         </div>
-        <div id="page">
+      @*  <div id="page">
             <a style="text-decoration:none;font-size: large; padding:0 15px 0 25px;" href ="https://www.durexvietnam.vn/collections/all?page=1">1</a>
             <a style="text-decoration:none;font-size: large; padding:0 15px 0 25px;" href ="https://www.durexvietnam.vn/collections/all?page=2">2</a>
-        </div>
+        </div>*@
 </div>   
 <script src="~/js/index.js"></script>
       
