--- a/FinalProject/CustomerApplication/Views/Home/Index.cshtml
+++ b/FinalProject/CustomerApplication/Views/Home/Index.cshtml
@@ -4,6 +4,7 @@
 <style>
         body{
             margin:0;
+            
         }
         #main{
             width: 100vw;
@@ -13,32 +14,78 @@
             background-color: #cccccc; /* Used if the image is unavailable */
             background-position: center;/* Center the image */
             background-repeat: no-repeat;/* Do not repeat the image */
-            height: 600px;; /* You must set a specified height */
+            height: 600px; /* You must set a specified height */
             position: relative;
             background-size: cover; /* Resize the background image to cover the entire container*/
         }
         .hero-text{
             align-items: center;
             background-color: #133e7a;
-          
-            padding: 200px 200px 200px 200px;
+        
+            clip-path: circle(100% at 0 50%);
+            height: 100%;
+            
+            width: 50%;
             color: white;
             font-weight: bolder;
             text-align: center;
-            position: absolute;
-            top: 50%;
-            left: 25%;
-            transform: translate(-47%, -50%);
+         
+            /* position: absolute; */
+            /* top: 50%;
+            left: 25%; */
+            /* transform: translate(0%, 0%); */
+        }
+        /* Tạo phần tử giả */
+            .hero-text::before {
+            content: " ";
+            display: inline-block;
+            height: 100%;
+            width: 1%;
+            vertical-align: middle;
+        }
+        .hero-text .test {
+            display: inline-block;
+            vertical-align: middle;
+            width: 450px;
+            padding: 10px;
+            /* background: #003999; */
+        }
+        .button {
+            background-color: black;
+            border-radius: 50px;
+            color: white;
+            padding: 16px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            transition-duration: 0.4s;
+            cursor: pointer;
+        }
+        .button1 {
+            background-color: white;
+            color: #133e7a;
+            font-size: x-large;
+            font-weight: bold; 
+            border: 2px solid black;
         }
 
-</style>
+        .button1:hover {
+            border: 2px solid white;
+            background-color: #133e7a;
+            color: white;
+        }
 
+    </style>
 <body>
     <div id="main">
         <div class="hero-image">
             <div class="hero-text">
-                <h1 style="font-size:40px;"> KHỞI ĐỘNG CHO ĐÊM NÓNG BỎNG...</h1>
-                <button>Mua ngay</button>
+                <div class="test">
+                    <h1 style="font-size:40px;"> KHỞI ĐỘNG CHO ĐÊM NÓNG BỎNG...</h1>
+                    <button class="button button1">MUA NGAY</button>
+                </div>
             </div>
         </div>
     </div>
