--- a/FinalProject/AdminApplication/wwwroot/css/sb-admin-3.css
+++ b/FinalProject/AdminApplication/wwwroot/css/sb-admin-3.css
@@ -1198,8 +1198,10 @@ pre code {
     max-width: 25%;
   }
   .col-lg-4 {
-    flex: 0 0 33.33333%;
-    max-width: 33.33333%;
+    flex: 0 0 50%;
+    max-width: 50%;
+    margin-left:auto;
+    margin-right:auto;
   }
   .col-lg-5 {
     flex: 0 0 41.66667%;
