--- a/FinalProject/AdminApplication/Views/Admin/EditProduct.cshtml
+++ b/FinalProject/AdminApplication/Views/Admin/EditProduct.cshtml
@@ -42,7 +42,7 @@
                                     @Html.TextBoxFor(m => m.SoLuong, new { @class = "form-control" }) 
                                 </div>
                                 <div class="mb-3">
-                                    <label for="NgayNhap" class="form-label">Ngày nhập:</label>
+                                    <label for="NgayNhap" class="form-label">Ngày nhập (MM-dd-YYYY):</label>
                                     @Html.TextBoxFor(m => m.NgayNhap, new { @class = "form-control" }) 
                                 </div>
                                 <div class="mb-3">
