--- a/FinalProject/AdminApplication/Views/Admin/GetAllCustomers.cshtml
+++ b/FinalProject/AdminApplication/Views/Admin/GetAllCustomers.cshtml
@@ -25,7 +25,7 @@
                                             <th style="vertical-align:middle;">Số Điện Thoại</th>
                                             <th style="vertical-align:middle;">Địa Chỉ</th>
                                             <th style="vertical-align:middle;">Mã Tài Khoản</th>
-                                            <th style="vertical-align:middle;">Các Bài Đánh Giá</th>
+                                            <th style="vertical-align:middle;">Số Bài Đánh Giá</th>
                                             <th style="vertical-align:middle;">Tùy Chỉnh</th>
 
                                             @*<th style="vertical-align:middle;">Tài Khoản</th>
@@ -66,7 +66,7 @@
                                                 </td>
                                                 <td style="vertical-align:middle;">
                                                      @Html.ActionLink("Edit","EditCustomer",new{id = item.MaKh})
-                                                     @Html.ActionLink("Delete","DeleteCustomer",new{cId = item.MaKh})
+                                                     @Html.ActionLink("Delete","DeleteCustomer",new{cId = item.MaKh, uId = item.UserId})
                                                 </td>
 @*
                                                 <td style="vertical-align:middle;">@item.User.Email</td>
