--- a/FinalProject/AdminApplication/Views/Admin/GetAllProductRates.cshtml
+++ b/FinalProject/AdminApplication/Views/Admin/GetAllProductRates.cshtml
@@ -21,9 +21,9 @@
                                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                                     <thead>
                                         <tr>
-                                            <th style="vertical-align:middle;">Mã Khách Hàng</th>
-                                            <th style="vertical-align:middle;">Mã Đánh Giá</th>
                                             <th style="vertical-align:middle;">Mã Sản Phẩm</th>
+                                            <th style="vertical-align:middle;">Mã Khách Hàng</th>
+                                            <th style="vertical-align:middle;">Mã Đánh Giá</th>                                            
                                             <th style="vertical-align:middle;">Mức Đánh Giá</th>
                                             <th style="vertical-align:middle;">Nhận xét</th>
                                             <th style="vertical-align:middle;">Tùy Chỉnh</th>
@@ -31,9 +31,9 @@
                                     </thead>
                                     <tfoot>
                                         <tr>
-                                            <th style="vertical-align:middle;">Mã Khách Hàng</th>
-                                            <th style="vertical-align:middle;">Mã Đánh Giá</th>
                                             <th style="vertical-align:middle;">Mã Sản Phẩm</th>
+                                            <th style="vertical-align:middle;">Mã Khách Hàng</th>
+                                            <th style="vertical-align:middle;">Mã Đánh Giá</th>                                           
                                             <th style="vertical-align:middle;">Mức Đánh Giá</th>
                                             <th style="vertical-align:middle;">Nhận xét</th>
                                             <th style="vertical-align:middle;">Tùy Chỉnh</th>
@@ -44,14 +44,13 @@
                                         @foreach(var item in Model)
                                         {
                                           <tr>
-                                             <td style="vertical-align:middle;">@item.MaKh</td>
-                                             <td style="vertical-align:middle;">@item.MaDg</td>
                                              <td style="vertical-align:middle;">@item.MaSp</td>
+                                             <td style="vertical-align:middle;">@item.MaKh</td>
+                                             <td style="vertical-align:middle;">@item.MaDg</td>     
                                              <td style="vertical-align:middle;">@item.MucDg</td>
-                                             <td style="vertical-align:middle;">@item.NhanXet</td>
-                                    
+                                             <td style="vertical-align:middle;">@item.NhanXet</td>                                   
                                              <td style="vertical-align:middle;">
-                                                  @Html.ActionLink("Delete","DeleteRatingByC",new{id1 = item.MaDg, id2 = item.MaKh})
+                                                  @Html.ActionLink("Delete","DeleteRatingByP",new{id1 = item.MaDg, id2 = item.MaSp})
                                              </td>
                                            </tr>   
                                         }
