Ma Nhi nop bai hihi

--- a/FinalProject/CustomerApplication/Views/Home/Index.cshtml
+++ b/FinalProject/CustomerApplication/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
             
         }
         #main{
-            width: 100vw;
+            width: 100%;
         }
         .hero-image{
             background-image: url("https://cdn.shopify.com/s/files/1/0104/6662/3554/files/Home-Hero-2mobile_540x.jpg?v=1592438799") ;
@@ -77,6 +77,171 @@
             color: white;
         }
 
+        .but {
+            background-color: black;
+            border-radius: 50px;
+            color: white;
+            padding: 8px 17px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 12px;
+            margin: 4px 2px;
+            transition-duration: 0.4s;
+            cursor: pointer;
+        }
+        .but1 {
+            background-color: white;
+            color: #133e7a;
+            font-size: 12px;
+            font-weight: bold; 
+            text-align: center;
+            border: 2px solid black;
+        }
+
+        .but1:hover {
+            border: 2px solid white;
+            background-color: #133e7a;
+            color: white;
+        }
+
+
+
+        .header2 {
+            background-color: white;
+            color: #13a0ca;
+            padding-top: 50px;
+            padding-bottom: 40px;
+            width: 100%;
+           
+        }
+        .spad {
+	padding-top: 100px;
+	padding-bottom: 100px;
+}
+
+        /*---------------------
+  Form BLog
+-----------------------*/
+
+.from-blog {
+	padding-top: 50px;
+	padding-bottom: 50px;
+}
+
+.from-blog .blog__item {
+	margin-bottom: 30px;
+}
+
+.from-blog__title {
+	margin-bottom: 70px;
+}
+
+.section-title {
+	margin-bottom: 50px;
+	text-align: center;
+}
+
+.section-title h2 {
+	color: #1c1c1c;
+	font-weight: 700;
+	position: relative;
+}
+
+.section-title h2:after {
+	position: absolute;
+	left: 0;
+	bottom: -15px;
+	right: 0;
+	height: 4px;
+	width: 80px;
+	background: #7fad39;
+	content: "";
+	margin: 0 auto;
+}
+     
+/*---------------------
+  Blog
+-----------------------*/
+
+.blog__item {
+	margin-bottom: 60px;
+}
+
+.blog__item__pic img {
+	width: 400px;
+    height: 190px;
+    padding-bottom:5px;
+}
+
+.blog__item__text {
+	padding-top: 25px;
+}
+
+.blog__item__text ul {
+	margin-bottom: 15px;
+}
+
+.blog__item__text ul li {
+	font-size: 16px;
+	color: #b2b2b2;
+	list-style: none;
+	display: inline-block;
+	margin-right: 15px;
+}
+
+.blog__item__text ul li:last-child {
+	margin-right: 0;
+}
+
+.blog__item__text h5 {
+	margin-bottom: 12px;
+}
+
+.blog__item__text h5 a {
+	font-size: 20px;
+	color: #1c1c1c;
+	font-weight: 700;
+}
+
+.blog__item__text p {
+	margin-bottom: 25px;
+}
+
+.blog__item__text .blog__btn {
+	display: inline-block;
+	font-size: 14px;
+	color: #1c1c1c;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	border: 1px solid #b2b2b2;
+	padding: 14px 20px 12px;
+	border-radius: 25px;
+}
+
+.blog__item__text .blog__btn span {
+	position: relative;
+	top: 1px;
+	margin-left: 5px;
+}
+
+.blog__pagination {
+	padding-top: 5px;
+	position: relative;
+}
+
+.blog__pagination:before {
+	position: absolute;
+	left: 0;
+	top: -29px;
+	height: 1px;
+	width: 100%;
+	background: #000000;
+	opacity: 0.1;
+	content: "";
+}
+
+
     </style>
 <body>
     <div id="main">
@@ -84,9 +249,93 @@
             <div class="hero-text">
                 <div class="test">
                     <h1 style="font-size:40px;"> KHỞI ĐỘNG CHO ĐÊM NÓNG BỎNG...</h1>
-                    <button class="button button1">MUA NGAY</button>
+                    <button class="button button1">MUA NGAY</button></a></h5></a></h5></a></h5></a></h5>
                 </div>
             </div>
         </div>
+
+    <div class="header2">
+            <div class="text">
+                <div class = "text1">
+                    <h1 style="font-size:80px; text-align:center;" >THỎA MÃN TRONG MỌI CUỘC YÊU</h1>
+                    <p style="text-align:center;font-weight: bold;">Đã rất xưa rồi thời mỗi người chỉ có một cách yêu, chỉ làm một tư thế và chỉ tin vào một suy nghĩ lối mòn.
+                     <br>Durex tin rằng ai cũng có thể trải nghiệm cuộc yêu thăng hoa với người ấy của mình.
+                    <br> Đã đến lúc thách thức định kiến và phá bỏ những lối mòn.
+                     <br>Cứ “yêu” theo cách của bạn – miễn là đê mê!</p>
+                      <button class="but but1">BÍ KÍP CHO CUỘC YÊU THĂNG HOA </button>
+                </div>
+            </div>
     </div>
+
+    <div class = "content">
+    <section class="from-blog spad">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="section-title from-blog__title">
+                        <h2>THÔNG TIN</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-6">
+                    <div class="blog__item">
+                        <div class="blog__item__pic">
+                            <img src="https://cdn.shopify.com/s/files/1/0104/6662/3554/files/KZDL10282_Home_page_-_Blog_Image_832_x_468px_517e9419-b8df-4fe4-9f73-678de9f4fea1.jpg?v=1614808465" alt="">
+                        </div>
+                        <div class="blog__item__text">
+                            <ul>
+                                <li><i class="fa fa-calendar-o"></i> May 16,2022</li>
+                                <li><i class="fa fa-comment-o"></i> 5</li>
+                            </ul>
+                            <h5><a href="#">Không nên chủ quan khi dùng thuốc tránh thai khẩn cấp</a></h5>
+                            <p>Thuốc tránh thai khẩn cấp thường là “cứu cánh” khi bạn gái quan hệ không dùng bao cao su, hoặc những cách tránh thai khác. Tuy nhiên, bạn nên biết về các tác dụng phụ để chủ động bảo vệ bản thân trước những biến chứng về sau! </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6">
+                    <div class="blog__item">
+                        <div class="blog__item__pic">
+                            <img src="https://cdn.shopify.com/s/files/1/0104/6662/3554/files/DWI-61_Home_page_-_Blog_Image_832_x_468px.jpg?v=1614807061" alt="">
+                        </div>
+                        <div class="blog__item__text">
+                            <ul>
+                                <li><i class="fa fa-calendar-o"></i> May 16,2022</li>
+                                <li><i class="fa fa-comment-o"></i> 5</li>
+                            </ul>
+                            <h5><a href="#">Có dễ mang thai khi quan hệ ở ngày rụng trứng ?</a></h5>
+                            <p>Vào những ngày rụng trứng, bạn gái thường tăng ham muốn tình dục. Vậy quan hệ ngày rụng trứng có dễ mang thai không? Tìm hiểu thông tin sau để có câu trả lời cho những thắc mắc của bạn.  </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6">
+                    <div class="blog__item">
+                        <div class="blog__item__pic">
+                            <img src="https://cdn.shopify.com/s/files/1/0104/6662/3554/files/DWI-105_Home_page_-_Blog_Image_832_x_468px.jpg?v=1614809130" alt="">
+                        </div>
+                        <div class="blog__item__text">
+                            <ul>
+                                <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
+                                <li><i class="fa fa-comment-o"></i> 5</li>
+                            </ul>
+                            <h5><a href="#">5 Biện pháp tránh thai phổ biến nhất</a></h5>
+                            <p>Có nhiều biện pháp để bạn ngăn ngừa thụ thai sau khi quan hệ tình dục, tuy nhiên biện pháp nào hiệu quả và phù hợp nhất là vấn đề cần phải quan tâm để chủ động bảo vệ sức khoẻ. </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    </div>
+
+   
+    </div>
+    
+
+    
+   
+
+
 </body>
