--- a/FinalProject/CustomerApplication/Views/Shared/_CustomerLayout.cshtml
+++ b/FinalProject/CustomerApplication/Views/Shared/_CustomerLayout.cshtml
@@ -4,6 +4,12 @@
 <head>
     <link rel="stylesheet" href="~/css/style3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="~/lib/bootstrap/css/bootstrap.min.css">
+    	
+    <script src="~/js/jquery-1.11.1.min.js"></script>
     @*<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">*@
     <title>Bao Cao Su, Gel Bôi Trơn & Tình Dục An Toàn | Durex Vietnam</title>
 </head>
@@ -36,7 +42,7 @@
                 <li ><a class="font-link" href="https://www.durexvietnam.vn/blogs/bi-kip-cho-cuoc-yeu-thang-hoa">Bí Kíp Cho Cuộc Yêu Thăng Hoa</a></li>
             </ul>
             </div>
-            <div id="search-bar">
+            <div id="search-bar" style="float:left;">
                 <input
                     style="font-size:larger;color:grey;background-color: white;border:none;border-radius:8px;height:30px;"
                     placeholder="TÌM KIẾM" id="searchInput">
@@ -92,6 +98,8 @@
             }
           }
         }
+
     </script> 
+   
 </body>
 </html>
