--- a/FinalProject/CustomerApplication/wwwroot/css/style3.css
+++ b/FinalProject/CustomerApplication/wwwroot/css/style3.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    width: 100vw;
-    height: 100vw;
+    width: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
     justify-content: center;
