--- a/FinalProject/AdminApplication/Views/Admin/AddProduct.cshtml
+++ b/FinalProject/AdminApplication/Views/Admin/AddProduct.cshtml
@@ -22,20 +22,17 @@
                             <p class="form-label" style="color: red">(*)Mã sản phẩm sẽ được tạo tự động</p>
                             @using (Html.BeginForm("SaveProduct", "Admin", FormMethod.Post))
                             {   
-                                <div class="mb-3">
+                              @*  <div class="mb-3">
                                     <label for="MaDm" class="form-label">Mã Danh Mục: </label>
                                     @Html.TextBoxFor(m => m.MaDm,  new { @class = "form-control" }) 
-                                </div>
-                               @* <div class="mb-3">
-                                <label for="MaDM" class="form-label">Danh mục </label>><br>
+                                </div>*@
+                                <div class="mb-3">
+                                <label for="MaDm" class="form-label">Danh mục </label>
                                     @Html.DropDownListFor(m => m.MaDm,
-                                                     new SelectList(ViewBag.DanhMucs, "MaDM", "TenDM"),
-                                                     new { @class = "form-control" }) <br>
-                                </div>*@
-                                 @* <div class="mb-3">
-                                    <label for="MaSp" class="form-label">Mã Sản Phẩm:</label>
-                                    @Html.TextBoxFor(m => m.MaSp, new { @class = "form-control" }) 
-                                </div>*@
+                                                     new SelectList(ViewBag.DanhMucs, "MaDm", "TenDm"),
+                                                     new { @class = "form-control" }) 
+                                </div>
+                           
                                 <div class="mb-3">
                                     <label for="TenSp" class="form-label">Tên Sản Phẩm:</label>
                                     @Html.TextBoxFor(m => m.TenSp, new { @class = "form-control" }) 
@@ -45,12 +42,13 @@
                                     @Html.TextBoxFor(m => m.Gia, new { @class = "form-control" })
                                 </div>
                                 <div class="mb-3">
+                             
                                     <label for="SoLuong" class="form-label">Số Lượng:</label>
                                     @Html.TextBoxFor(m => m.SoLuong, new { @class = "form-control" }) 
                                 </div>
                                 <div class="mb-3">
                                     <label for="NgayNhap" class="form-label">Ngày nhập:</label>
-                                    @Html.TextBoxFor(m => m.NgayNhap, new { @class = "form-control" }) 
+                                    @Html.TextBoxFor(m => m.NgayNhap, new { @class = "form-control" ,@type="datetime-local"}) 
                                 </div>
                                 <div class="mb-3">
                                     <label for="MoTa" class="form-label">Mô Tả:</label>
