update agian form nhi

--- a/FinalProject/CustomerApplication/Views/Home/Index.cshtml
+++ b/FinalProject/CustomerApplication/Views/Home/Index.cshtml
@@ -312,7 +312,7 @@ span#btn-next {
     justify-content: space-between;
 }
 
-    .nut-slide ul li {
+/*    .nut-slide ul li {
         width: 20px;
         height: 20px;
         background: white;
@@ -381,7 +381,7 @@ xử lý nút prev
 
 .nut-slide ul li.active_nut {
     opacity: 0.8;
-}
+}*/
 
 
     </style>
