Update bill page

--- a/FinalProject/AdminApplication/Views/Admin/EditCategory.cshtml
+++ b/FinalProject/AdminApplication/Views/Admin/EditCategory.cshtml
@@ -5,7 +5,7 @@
 @model AdminApplication.Models.DanhMuc
 <div class="container-fluid">
         <!-- Page Heading -->
-        <h1 class="h3 mb-1 text-gray-800">Thêm Danh Mục</h1>
+        <h1 class="h3 mb-1 text-gray-800">Cập Nhật Danh Mục</h1>
         <p class="mb-4">
         </p>
         <!-- Content Row -->
