--- a/FinalProject/AdminApplication/Views/Admin/GetAllCategories.cshtml
+++ b/FinalProject/AdminApplication/Views/Admin/GetAllCategories.cshtml
@@ -6,13 +6,14 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <h1 class="h3 mb-2 text-gray-800">Infomation Table</h1>
+                    <h1 class="h3 mb-2 text-gray-800">Bảng Danh Sách Thông Tin Tất Cả Danh Mục</h1>
                   
 
                     <!-- DataTales Example -->
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-primary" >All Categories</h6>
+                            <h6 class="m-0 font-weight-bold text-primary" style="float:left;"></h6>
+                              <a href="~/admin/addcategory" class="btn btn-outline-primary" role="button" aria-pressed="true" style="float:right;">Thêm</a>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
