--- a/FinalProject/AdminApplication/Views/Admin/EditCustomer.cshtml
+++ b/FinalProject/AdminApplication/Views/Admin/EditCustomer.cshtml
@@ -5,7 +5,7 @@
 @model AdminApplication.Models.KhachHang
 <div class="container-fluid">
         <!-- Page Heading -->
-        <h1 class="h3 mb-1 text-gray-800">Thêm Danh Mục</h1>
+        <h1 class="h3 mb-1 text-gray-800">Cập Nhật Khách Hàng</h1>
         <p class="mb-4">
         </p>
         <!-- Content Row -->
