--- a/FinalProject/AdminApplication/Views/Admin/GetAllCustomers.cshtml
+++ b/FinalProject/AdminApplication/Views/Admin/GetAllCustomers.cshtml
@@ -7,13 +7,13 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <h1 class="h3 mb-2 text-gray-800">Infomation Table</h1>
+                    <h1 class="h3 mb-2 text-gray-800">Bảng Danh Sách Thông Tin Tất Cả Khách Hàng</h1>
                   
 
                     <!-- DataTales Example -->
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-primary">All Customers</h6>
+                            <h6 class="m-0 font-weight-bold text-primary"></h6>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
