--- a/FinalProject/AdminApplication/Views/Admin/GetAllProductRates.cshtml
+++ b/FinalProject/AdminApplication/Views/Admin/GetAllProductRates.cshtml
@@ -7,14 +7,14 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <h1 class="h3 mb-2 text-gray-800">Infomation Table</h1>
+                    <h1 class="h3 mb-2 text-gray-800">Bảng Danh Sách Thông Tin Các Bài Đánh Giá Của Sản Phẩm @ViewBag.prodID </h1>
                   
 
                     <!-- DataTales Example -->
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-primary" style="float:left;">All Customer 's Rates</h6>
-                            <a href="~/admin/getallcustomers" class="btn btn-outline-danger" role="button" aria-pressed="true" style="float:right;">Quay lại</a>
+                            <h6 class="m-0 font-weight-bold text-primary" style="float:left;"></h6>
+                            <a href="~/admin/getallproducts" class="btn btn-outline-danger" role="button" aria-pressed="true" style="float:right;">Quay lại</a>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
