--- a/FinalProject/CustomerApplication/Views/Shared/_Layout.cshtml
+++ b/FinalProject/CustomerApplication/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - CustomerApplication</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/font-awesome.css">
     <link rel="stylesheet" href="~/CustomerApplication.styles.css" asp-append-version="true" />
 </head>
 <body>
@@ -41,6 +42,7 @@
             &copy; 2022 - CustomerApplication - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+    <script src="~/js/main.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
