--- a/FinalProject/CustomerApplication/Views/Home/Index.cshtml
+++ b/FinalProject/CustomerApplication/Views/Home/Index.cshtml
@@ -3,385 +3,10 @@
 }
 <head>
     <link rel="stylesheet" type="text/css" href="~/lib/bootstrap/css/bootstrap.min.css">
-	
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-
 </head>
 <style>
-        body{
-            margin:0;
-            
-        }
-        #main{
-            width: 100%;
-        }
-        .hero-image{
-            background-image: url("https://cdn.shopify.com/s/files/1/0104/6662/3554/files/Home-Hero-2mobile_540x.jpg?v=1592438799") ;
-            background-color: #cccccc; /* Used if the image is unavailable */
-            background-position: center;/* Center the image */
-            background-repeat: no-repeat;/* Do not repeat the image */
-            height: 600px; /* You must set a specified height */
-            position: relative;
-            background-size: cover; /* Resize the background image to cover the entire container*/
-        }
-        .hero-text{
-            align-items: center;
-            background-color: #133e7a;
         
-            clip-path: circle(100% at 0 50%);
-            height: 100%;
-            
-            width: 50%;
-            color: white;
-            font-weight: bolder;
-            text-align: center;
-         
-            /* position: absolute; */
-            /* top: 50%;
-            left: 25%; */
-            /* transform: translate(0%, 0%); */
-        }
-        /* Tạo phần tử giả */
-            .hero-text::before {
-            content: " ";
-            display: inline-block;
-            height: 100%;
-            width: 1%;
-            vertical-align: middle;
-        }
-        .hero-text .test {
-            display: inline-block;
-            vertical-align: middle;
-            width: 450px;
-            padding: 10px;
-            /* background: #003999; */
-        }
-        .button {
-            background-color: black;
-            border-radius: 50px;
-            color: white;
-            padding: 16px 32px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            transition-duration: 0.4s;
-            cursor: pointer;
-        }
-        .button1 {
-            background-color: white;
-            color: #133e7a;
-            font-size: x-large;
-            font-weight: bold; 
-            border: 2px solid black;
-        }
-
-        .button1:hover {
-            border: 2px solid white;
-            background-color: #133e7a;
-            color: white;
-        }
-
-        .but {
-            background-color: black;
-            border-radius: 50px;
-            color: white;
-            padding: 8px 17px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 12px;
-            margin: 4px 2px;
-            transition-duration: 0.4s;
-            cursor: pointer;
-        }
-        .but1 {
-            background-color: white;
-            color: #133e7a;
-            font-size: 12px;
-            font-weight: bold; 
-            text-align: center;
-            border: 2px solid black;
-        }
-
-        .but1:hover {
-            border: 2px solid white;
-            background-color: #133e7a;
-            color: white;
-        }
-
-
-        
-
-        .header2 {
-            background-color: white;
-            color: #13a0ca;
-            padding-top: 50px;
-            padding-bottom: 40px;
-            width: 100%;
-           
-        }
-        .spad {
-	padding-top: 100px;
-	padding-bottom: 100px;
-}
-
-        /*---------------------
-  Form BLog
------------------------*/
-
-.from-blog {
-	padding-top: 50px;
-	padding-bottom: 50px;
-}
-
-.from-blog .blog__item {
-	margin-bottom: 30px;
-}
-
-.from-blog__title {
-	margin-bottom: 70px;
-}
-
-.section-title {
-	margin-bottom: 50px;
-	text-align: center;
-}
-
-.section-title h2 {
-	color: #1c1c1c;
-	font-weight: 700;
-	position: relative;
-}
-
-.section-title h2:after {
-	position: absolute;
-	left: 0;
-	bottom: -15px;
-	right: 0;
-	height: 4px;
-	width: 80px;
-	background: #7fad39;
-	content: "";
-	margin: 0 auto;
-}
-     
-/*---------------------
-  Blog
------------------------*/
-
-.blog__item {
-	margin-bottom: 60px;
-}
-
-.blog__item__pic img {
-	width: 400px;
-    height: 190px;
-    padding-bottom:5px;
-}
-
-.blog__item__text {
-	padding-top: 25px;
-}
-
-.blog__item__text ul {
-	margin-bottom: 15px;
-}
-
-.blog__item__text ul li {
-	font-size: 16px;
-	color: #b2b2b2;
-	list-style: none;
-	display: inline-block;
-	margin-right: 15px;
-}
-
-.blog__item__text ul li:last-child {
-	margin-right: 0;
-}
-
-.blog__item__text h5 {
-	margin-bottom: 12px;
-}
-
-.blog__item__text h5 a {
-	font-size: 20px;
-	color: #1c1c1c;
-	font-weight: 700;
-}
-
-.blog__item__text p {
-	margin-bottom: 25px;
-}
-
-.blog__item__text .blog__btn {
-	display: inline-block;
-	font-size: 14px;
-	color: #1c1c1c;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	border: 1px solid #b2b2b2;
-	padding: 14px 20px 12px;
-	border-radius: 25px;
-}
-
-.blog__item__text .blog__btn span {
-	position: relative;
-	top: 1px;
-	margin-left: 5px;
-}
-
-.blog__pagination {
-	padding-top: 5px;
-	position: relative;
-}
-
-.blog__pagination:before {
-	position: absolute;
-	left: 0;
-	top: -29px;
-	height: 1px;
-	width: 100%;
-	background: #000000;
-	opacity: 0.1;
-	content: "";
-}
-
-
-
-.khoi-slide {
-    width: 100%;
-    height: 700px;
-    position: relative;
-}
-
-img {
-    width: 100%;
-}
-
-.cac-slide {
-    width: 100%;
-    height: 700px;
-    overflow: hidden;
-}
-
-.slide {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    opacity: 0;
-    visibility: hidden;
-}
-
-    .slide.active {
-        opacity: 1;
-        visibility: visible;
-    }
-
-.nut-slide span {
-    color: white;
-    font-size: 60px;
-    opacity: 0.5;
-}
-
-span#btn-prev {
-    position: absolute;
-    top: 30%;
-    left: 0%;
-    z-index: 10;
-    cursor: pointer;
-}
-
-span#btn-next {
-    position: absolute;
-    top: 30%;
-    right: 0%;
-    z-index: 10;
-    cursor: pointer;
-}
-
-.nut-slide ul {
-    position: absolute;
-    z-index: 10;
-    width: 100px;
-    bottom: 25%;
-    left: 50%;
-    margin-left: -50px;
-    display: flex;
-    justify-content: space-between;
-}
-
-/*    .nut-slide ul li {
-        width: 20px;
-        height: 20px;
-        background: white;
-        opacity: 0.5;
-        list-style: none;
-        border-radius: 50%;
-        cursor: pointer;
-        transition: 0.6s;
-    }
-
-.bien-mat-ben-trai {
-    animation: bien-mat-ben-trai 1s forwards;
-}
-
--webkit-keyframes bien-mat-ben-trai {
-    from {
-        transform: translateX(0%);
-    }
-
-    to {
-        transform: translateX(-100%);
-    }
-}
-
-.di-vao-ben-phai {
-    animation: di-vao-ben-phai 1s forwards;
-}
-
--webkit-keyframes di-vao-ben-phai {
-    from {
-        transform: translateX(100%);
-    }
-
-    to {
-        transform: translateX(0%);
-    }
-}
-xử lý nút prev
-.bien-mat-ben-phai {
-    animation: bien-mat-ben-phai 1s forwards;
-}
-
--webkit-keyframes bien-mat-ben-phai {
-    from {
-        transform: translateX(0%);
-    }
-
-    to {
-        transform: translateX(100%);
-    }
-}
-
-.di-vao-ben-trai {
-    animation: di-vao-ben-trai 1s forwards;
-}
-
--webkit-keyframes di-vao-ben-trai {
-    from {
-        transform: translateX(-100%);
-    }
-
-    to {
-        transform: translateX(0%);
-    }
-}
-
-.nut-slide ul li.active_nut {
-    opacity: 0.8;
-}*/
 
 
     </style>
@@ -396,15 +21,36 @@ xử lý nút prev
             </div>
         </div>
 
+    
     <div class="header2">
+        <div class="khoi-slide">
+	        <div class="cac-slide">
+		        <div class="slide active"><img style="width: 100%;height:400px;" src="~/assets/images/l4.png" ></div>
+		        <div class="slide"><img style="width:100%;height:400px;" src="~/assets/images/l3.png" ></div>
+                <div class="slide"><img style="width:100%;height:400px;" src="~/assets/images/l1.png" ></div>
+	        </div>
+	        <div class="nut-slide">
+		        <span id="btn-prev"><i class="fas fa-chevron-left"></i></span>
+		        <span id="btn-next"><i class="fas fa-chevron-right"></i></span>
+		        <ul>
+			        <li class="active_nut"></li>
+			        <li></li>
+			        <li></li>
+			        <li></li>
+		        </ul>
+	        </div>
+    
+        </div>	
             <div class="text">
                 <div class = "text1">
-                    <h1 style="font-size:80px; text-align:center;" >THỎA MÃN TRONG MỌI CUỘC YÊU</h1>
-                    <p style="text-align:center;font-weight: bold;">Đã rất xưa rồi thời mỗi người chỉ có một cách yêu, chỉ làm một tư thế và chỉ tin vào một suy nghĩ lối mòn.
+                    <h1 style="font-size:80px; text-align:center;padding-top:30px;" >THỎA MÃN TRONG MỌI CUỘC YÊU</h1>
+                    <p style="text-align:center;font-weight: bold;font-size:15px;">Đã rất xưa rồi thời mỗi người chỉ có một cách yêu, chỉ làm một tư thế và chỉ tin vào một suy nghĩ lối mòn.
                      <br>Durex tin rằng ai cũng có thể trải nghiệm cuộc yêu thăng hoa với người ấy của mình.
                     <br> Đã đến lúc thách thức định kiến và phá bỏ những lối mòn.
                      <br>Cứ “yêu” theo cách của bạn – miễn là đê mê!</p>
-                      <button class="but but1">BÍ KÍP CHO CUỘC YÊU THĂNG HOA </button>
+                </div>
+                <div class="the" style="padding-top:20px;"> 
+                      <button style="margin:auto;display:block;"class="but but1">BÍ KÍP CHO CUỘC YÊU THĂNG HOA </button>
                 </div>
             </div>
     </div>
@@ -412,14 +58,14 @@ xử lý nút prev
     <div class = "content">
     <section class="from-blog spad">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="section-title from-blog__title">
+            <div class="row" style="text-align:center; margin:auto;display:block;">
+              
+                    <div class="section-title from-blog__title" >
                         <h2>THÔNG TIN</h2>
                     </div>
-                </div>
+               
             </div>
-            <div class="row">
+            <div class="row1">
                 <div class="col-lg-4 col-md-4 col-sm-6">
                     <div class="blog__item">
                         <div class="blog__item__pic">
@@ -472,24 +118,8 @@ xử lý nút prev
         </div>
     </section>
 
-
-    <div class="khoi-slide">
-	<div class="cac-slide">
-		<div class="slide active"><img style="width: 100%;height:600px;" src="~/assets/images/l3.jpg" ></div>
-		<div class="slide"><img style="width: 100%;height:600px;" src="~/assets/images/l1.jpg"></div>
-		<div class="slide"><img style="width: 100%;height:600px;" src="~/assets/images/l2.jpg" ></div>
-	</div>
-	<div class="nut-slide">
-		<span id="btn-prev"><i class="fas fa-chevron-left"></i></span>
-		<span id="btn-next"><i class="fas fa-chevron-right"></i></span>
-		<ul>
-			<li class="active_nut"></li>
-			<li></li>
-			<li></li>
-			<li></li>
-		</ul>
-	</div>
-</div>	
+    
+        
 
 
 <div class="wrapper">
@@ -508,6 +138,7 @@ xử lý nút prev
 	<script type="text/javascript" src="~/js/popper.min.js"></script>
 	<script type="text/javascript" src="~/lib/bootstrap/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="~/js/script.js"></script>
+    <script type="text/javascript" src="~/js/main.js"></script>
 @*   <script type="text/javascript">
         function validateCaseSensitiveEmail() {
 
