--- a/FinalProject/CustomerApplication/Views/Shared/_CustomerLayout.cshtml
+++ b/FinalProject/CustomerApplication/Views/Shared/_CustomerLayout.cshtml
@@ -2,20 +2,26 @@
 <html>
 
 <head>
+    <link rel="stylesheet" type="text/css" href="~/css/index.css" />
     <link rel="stylesheet" href="~/css/style3.css">
+    <link rel="stylesheet" href="~/css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="~/lib/bootstrap/css/bootstrap.min.css">
+    <link href="~/css/bootstrap.css" rel='stylesheet' type='text/css' />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-   
-    <link rel="stylesheet" type="text/css" href="~/lib/bootstrap/css/bootstrap.min.css">
-    	
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="~/js/jquery-1.11.1.min.js"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     @*<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">*@
     <title>Bao Cao Su, Gel Bôi Trơn & Tình Dục An Toàn | Durex Vietnam</title>
 </head>
 
 <body>
-    <div id="header">
+    @*Header*@
+    
+
+ <div id="header">
             <div id="logo-bar">
             <a href="~/home/index"><img  src="~/assets/images/logo1.png"/></a>
             <ul>
@@ -25,7 +31,7 @@
             <ul>
                 <li>
                     <div class="dropdown">
-                        <div style=" color: white;font-size: 20px;text-decoration: none;" class="dropbtn" onclick="myFunction()">
+                        <div style=" color: white;font-size: 20px;text-decoration: none;font-weight:lighter;" class="dropbtn" onclick="myFunction()">
                             Bao Cao Su
                           <i class="fa fa-caret-down"></i>
                         </div>
@@ -43,8 +49,39 @@
             </div>
             <div id="search-bar" style="float:left;">
                 <input
-                    style="font-size:larger;color:grey;background-color: white;border:none;border-radius:8px;height:30px;"
+                    style="font-size:larger;color:grey;background-color: white;border:none;border-radius:8px;height:30px;width:350px;"
                     placeholder="TÌM KIẾM" id="searchInput">
+                 <button id="cart" class="but but1" style="width:150px;height:40px;">
+                    <i class="fa fa-shopping-basket" aria-hidden="true"></i> Giỏ Hàng
+                    </button>
+                @*<div id="myModal" class="modal">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Giỏ Hàng</h5>
+                        <span class="close">&times;</span>
+                    </div>
+                    <div class="modal-body">
+                        <div class="cart-row">
+                            <span class="cart-item cart-header cart-column">Sản Phẩm</span>
+                            <span class="cart-price cart-header cart-column">Giá</span>
+                            <span class="cart-quantity cart-header cart-column">Số Lượng</span>
+                        </div>
+                        <div class="cart-items">
+
+                        </div>
+                        <div class="cart-total">
+                            <strong class="cart-total-title">Tổng Cộng:</strong>
+                            <span class="cart-total-price">0VNĐ</span>
+                        </div>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary close-footer">Đóng</button>
+                        <button type="button" class="btn btn-primary order">Thanh Toán</button>
+                    </div>
+                </div>
+            </div>*@
+
             </div>
     </div>
         
@@ -52,9 +89,9 @@
        @RenderBody()
     </div>
 
-    <div class="footer"> 
+   <div class="footer"> 
         <div class="footer-box">
-            <img height= "150px" width= "110px" src="~/assets/images/logo1.png" />
+            <img style="height: 70px; width: 68px;" src="~/assets/images/logo1.png" />
             <div class="main-footersocial">   
                 <div style="margin:5px;">
                   <a href="https://www.facebook.com/Durex.Vietnam" class="facebook" target="_blank" rel="noopener noreferrer" title="Durex Vietnam on Facebook">
@@ -72,7 +109,7 @@
                   </a>
                 </div>
             </div>
-            <div class="extra-footer" style="width:100%;margin-left:30px;display:flex;text-align:center;">      
+            <div class="extra-footer" style="width:100%;display:flex;text-align:center;">      
                 <div style="margin:5px;"><a class="font-link" href="/pages/lien-he">Liên hệ</a></div>      
                 <div style="margin:5px;"><a class="font-link" href="/pages/chinh-sach-bao-mat">Chính sách bảo mật</a></div>      
                 <div style="margin:5px;"><a class="font-link" href="/pages/chinh-sach-cookie">Chính sách Cookie</a></div>   
@@ -102,7 +139,7 @@
     </script> 
    
      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-
+     <script type="text/javascript" src="~/js/main.js"></script>
 
 </body>
 </html>
