--- a/FinalProject/CustomerApplication/wwwroot/css/style3.css
+++ b/FinalProject/CustomerApplication/wwwroot/css/style3.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'One Night SansVN', sans-serif;
     width: 100%;
     height: 100%;
     margin: 0;
@@ -20,7 +20,7 @@ body {
     /*  padding-left: 10px;*/
     display: flex;
     -webkit-appearance: none;
-    padding: 20px;
+    padding: 18px;
     margin: 0px 0 0 0;
 }
 
@@ -79,8 +79,8 @@ body {
 
 #search-bar {
     -webkit-appearance: none;
-    padding: 20px;
-    margin: 15px 0 0 0;
+    padding: 25px;
+  /*  margin: 15px 0 0 0;*/
 }
 
 #searchInput {
@@ -90,17 +90,18 @@ body {
 }
 
 .font-link {
-    padding-top:20px;
     color: white;
     font-size: 20px;
     height: 100px;
     text-decoration: none;
+    font-weight: lighter;
 }
 
 
 .footer {
     background-color: rgba(0,91,170,255);
     width: 100%;
+    height:280px;
 }
 
 ul {
@@ -134,11 +135,13 @@ ul {
 .extra-footer .font-link:hover {
     color: white;
     text-decoration: underline white solid;
+    font-weight: lighter;
 }
 
 #header #logo-bar .font-link:hover {
     color: white;
     text-decoration: underline white solid;
+    font-weight: lighter;
 }
 /*==============================================================================*/
 
@@ -176,7 +179,7 @@ ul {
     width: 80%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: left;
+    justify-content: center;
     /* border: 1px solid black; */
 }
 
@@ -260,3 +263,29 @@ ul {
         color: yellow;
     }
 }
+.logo h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 4em;
+    color: white;
+    display: inline-block;
+    position: relative;
+}
+
+    .logo h1 a {
+        text-decoration: none;
+        color: white;
+    }
+    .logo h1 b {
+        font-size: 9px;
+        background: #ED0612;
+        font-weight: normal;
+        padding: 3px;
+        display: inline-block;
+        position: absolute;
+        top: 8px;
+        left: -10px;
+        color: #fff;
+        line-height: 8px;
+    }
+
+
