--- a/FinalProject/AdminApplication/Views/Admin/EditBill.cshtml
+++ b/FinalProject/AdminApplication/Views/Admin/EditBill.cshtml
@@ -29,10 +29,10 @@
                             <label for="MaSp" class="form-label">Ngày Giao:</label>
                             @Html.TextBoxFor(m => m.NgayGiao, new { @class = "form-control", @type="datetime-local"} )
                         </div>
-                        @*<div class="mb-3">
+                        <div class="mb-3">
                             <label for="MaSp" class="form-label">Ngày Nhận</label>
-                            @Html.TextBoxFor(m => m.NgayNhan, new { @class = "form-control" , @readonly = "readonly" , @type="datetime-local"} )
-                        </div>*@
+                            @Html.TextBoxFor(m => m.NgayNhan, new { @class = "form-control"  , @type="datetime-local"} )
+                        </div>
                         <div class="mb-3">
                             <label for="MaDm" class="form-label">Trạng Thái Đơn Hàng</label>
 
